fixed the a tag overlap in mobile view for company section - part 2

--- a/css/styles-3.css
+++ b/css/styles-3.css
@@ -364,7 +364,7 @@ address{
     letter-spacing: 0.2px;
     line-height: 25px;
 }
-.company-details-item a{
+.company-details-item .detailed a{
     font-family: 'NationalLight', Arial, sans-serif;
     text-decoration: none;
     color: #005d3d;
